--- a/styles.css
+++ b/styles.css
@@ -161,3 +161,17 @@ header {
   bottom: 50px;
   right: 30px;
 }
+
+#apply-filter-button {
+  background-color: #007bff;
+  border: none;
+  color: white;
+  padding: 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 8px;
+}
